--- a/Receive/Receive/MainWindow.xaml
+++ b/Receive/Receive/MainWindow.xaml
@@ -1,12 +1,15 @@
-﻿<Window x:Class="Receive.MainWindow"
+﻿<Window  x:Class="Receive.MainWindow" Closed="Window_Closed"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="MainWindow" Height="350" Width="525" Background="Gray">
     <Grid>
-        <Button x:Name="buttonExit" Content="Exit" HorizontalAlignment="Left" Margin="10,221,0,0" VerticalAlignment="Top" Width="93" Click="buttonExit_Click" Background="#FF2EB634"/>
+        <Button x:Name="buttonExit" Content="Exit" HorizontalAlignment="Left" Margin="10,221,0,0" VerticalAlignment="Top" Width="107" Click="buttonExit_Click" Background="#FF2EB634"/>
         <Label x:Name="labelServer" Content="Server is waiting for connections" HorizontalAlignment="Left" Margin="91,35,0,0" VerticalAlignment="Top" Width="314" FontSize="20"/>
         <Label x:Name="labelDot" Content="" HorizontalAlignment="Left" Margin="383,35,0,0" VerticalAlignment="Top" Width="22" FontSize="20"/>
-        <Button x:Name="AddConnection" Content="Add Connection" HorizontalAlignment="Left" Margin="10,201,0,0" VerticalAlignment="Top" Width="93"/>
+        <Button x:Name="AddConnection" Content="Add Connection" HorizontalAlignment="Left" Margin="10,161,0,0" VerticalAlignment="Top" Width="107" Click="AddConnection_Click"/>
+        <Button x:Name="buttonShowConnections" Content="Show Connections" HorizontalAlignment="Left" Margin="10,181,0,0" VerticalAlignment="Top" Width="107" Click="buttonShowConnections_Click" />
+        <Button x:Name="buttonDeleteConnection" Content="Delete Connection" HorizontalAlignment="Left" Margin="10,201,0,0" VerticalAlignment="Top" Width="107" Click="buttonDeleteConnection_Click" />
+        <Button x:Name="button_send" Content="Send File" HorizontalAlignment="Left" Margin="10,141,0,0" VerticalAlignment="Top" Width="107" Click="button_send_Click"/>
 
     </Grid>
 </Window>
