--- a/Receive/Receive/WindowSendFile.xaml
+++ b/Receive/Receive/WindowSendFile.xaml
@@ -11,9 +11,10 @@
         <Button x:Name="button_browse" Content="Browse" HorizontalAlignment="Left" Margin="99,98,0,0" VerticalAlignment="Top" Width="75" RenderTransformOrigin="0.325,-0.62" Click="button_browse_Click"/>
         <Button x:Name="button_send" Content="send" HorizontalAlignment="Left" Margin="99,164,0,0" VerticalAlignment="Top" Width="75" Click="button_send_Click"/>
         <Label x:Name="label_send" Content="" HorizontalAlignment="Left" Margin="196,95,0,0" VerticalAlignment="Top"/>
-        <ProgressBar x:Name="progress_bar" HorizontalAlignment="Left" Minimum="1" Maximum="100" Value="1" Height="24" Margin="10,213,0,0" VerticalAlignment="Top" Width="292"/>
-        <ComboBox x:Name="comboBox_connection" HorizontalAlignment="Left" Margin="99,51,0,0" VerticalAlignment="Top" Width="120" />
+        <ProgressBar x:Name="progress_bar" HorizontalAlignment="Left" Minimum="0" Maximum="100" Value="0" Height="24" Margin="10,213,0,0" VerticalAlignment="Top" Width="292" ValueChanged="progress_bar_ValueChanged"/>
+        <ComboBox x:Name="comboBox_connection" HorizontalAlignment="Left" Margin="99,51,0,0" VerticalAlignment="Top" Width="179" />
         <Label x:Name="label_msg" Content="" HorizontalAlignment="Left" Margin="224,158,0,0" VerticalAlignment="Top" Width="482"/>
+        <Label x:Name="label_percentage" Content="0%" HorizontalAlignment="Left" Margin="99,211,542,0" VerticalAlignment="Top" Width="75" HorizontalContentAlignment="Center"/>
 
     </Grid>
 </Window>
